build_err.txt
/home/az/project/BusinessCraft/common/src/main/java/com/quackers29/businesscraft/block/entity/TownInterfaceEntity.java:701: error: ';' expected
                            latest data is
                                       ^
/home/az/project/BusinessCraft/common/src/main/java/com/quackers29/businesscraft/block/entity/TownInterfaceEntity.java:701: error: not a statement
                            latest data is
                                        ^
/home/az/project/BusinessCraft/common/src/main/java/com/quackers29/businesscraft/block/entity/TownInterfaceEntity.java:701: error: ';' expected
                            latest data is
                                          ^
3 errors

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':common:compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
> Run with --info option to get more log output.
> Run with --scan to get full insights.

BUILD FAILED in 1s
